src/objects/Project_Idea__c.object
<CustomObject>
    <description>Object that links Accounts, Contacts, and Programs, and geography together as an idea for a future project.</description>
    <fields>
        <fullName>Lead_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Organization that is taking the lead on creating/implementing the project.</description>
        <label>Lead Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Potential Projects</relationshipLabel>
        <relationshipName>Potential_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person leading the potential project implementation.</description>
        <label>Lead Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Potential Projects</relationshipLabel>
        <relationshipName>Potential_Projects_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Potential_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>UN-specific region where the potential project may be implemented.</description>
        <label>Potential Geographic Region</label>
        <referenceTo>UN_Regions__c</referenceTo>
        <relationshipLabel>Project Ideas</relationshipLabel>
        <relationshipName>Project_Ideas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Type of program to be implemented.</description>
        <label>Program Type</label>
        <referenceTo>Cohort__c</referenceTo>
        <relationshipLabel>Project Ideas</relationshipLabel>
        <relationshipName>Potential_Program_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UN_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>UN-specific country where the project idea is to be implemented.</description>
        <label>UN Country</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UN_Country__c.UN_Regions__c</field>
                <operation>equals</operation>
                <valueField>$Source.UN_Region__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UN_Country__c</referenceTo>
        <relationshipLabel>Project Ideas</relationshipLabel>
        <relationshipName>Project_Ideas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UN_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>UN-specific region where the program could be implemented.</description>
        <label>UN Regions</label>
        <referenceTo>UN_Regions__c</referenceTo>
        <relationshipLabel>Project Ideas (UN Regions)</relationshipLabel>
        <relationshipName>Project_Ideas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Idea</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Ideas Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Ideas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>